--- a/linter_exclusions.yml
+++ b/linter_exclusions.yml
@@ -259,6 +259,9 @@ aks create:
     node_osdisk_diskencryptionset_id:
       rule_exclusions:
       - option_length_too_long
+    enable_encryption_at_host:
+      rule_exclusions:
+      - option_length_too_long
 aks enable-addons:
   parameters:
     workspace_resource_id:
@@ -275,6 +278,9 @@ aks nodepool add:
       rule_exclusions:
       - option_length_too_long
     node_public_ip_prefix_id:
+      rule_exclusions:
+      - option_length_too_long
+    enable_encryption_at_host:
       rule_exclusions:
       - option_length_too_long
 aks update:
