--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -12,6 +12,7 @@
 /scripts/live_test @qwordy
 /src/azure-cli-testsdk/ @jsntcy @jiasli @kairu-ms @qwordy
 /src/azure-cli-core/ @jiasli @Juliehzl @fengzhou-msft @evelyn-ys @jsntcy @houk-ms
+/src/azure-cli-core/azure/cli/core/auth/ @jiasli @evelyn-ys
 /src/azure-cli-core/azure/cli/core/extension/ @msyyc @fengzhou-msft
 /src/azure-cli-core/azure/cli/core/_profile.py @jiasli @evelyn-ys
 /src/azure-cli-core/azure/cli/core/adal_authentication.py @jiasli @evelyn-ys
