--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -57,4 +57,4 @@
 /src/azure-cli/azure/cli/command_modules/storage/ @Juliehzl @jsntcy @zhoxing-ms @evelyn-ys
 /src/azure-cli/azure/cli/command_modules/synapse/ @idear1203 @sunsw1994 @aim-for-better
 /src/azure-cli/azure/cli/command_modules/util/ @jiasli @Juliehzl @zhoxing-ms @evelyn-ys
-/src/azure-cli/azure/cli/command_modules/vm/ @qwordy @houk-ms @yungezz
+/src/azure-cli/azure/cli/command_modules/vm/ @qwordy @houk-ms @yungezz @xfz11
