Update code owners for acr, acs

--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -17,8 +17,8 @@
 /src/azure-cli-core/azure/cli/core/adal_authentication.py @jiasli @evelyn-ys
 /src/azure-cli-core/azure/cli/core/msal_authentication.py @jiasli @evelyn-ys
 /src/azure-cli-core/azure/cli/core/style.py @jiasli @evelyn-ys @zhoxing-ms
-/src/azure-cli/azure/cli/command_modules/acr/ @djyou @fengzhou-msft @yungezz
-/src/azure-cli/azure/cli/command_modules/acs/ @rjtsdl @fengzhou-msft
+/src/azure-cli/azure/cli/command_modules/acr/ @fengzhou-msft @yungezz @northtyphoon @rosanch
+/src/azure-cli/azure/cli/command_modules/acs/ @fengzhou-msft @zqingqing1 @gtracer @xizhamsft @andyliuliming
 /src/azure-cli/azure/cli/command_modules/advisor/ @Prasanna-Padmanabhan
 /src/azure-cli/azure/cli/command_modules/apim/ @kevinhillinger @jonlester
 /src/azure-cli/azure/cli/command_modules/appconfig/ @shenmuxiaosen @avanigupta @qwordy
