azdev style test fixed

--- a/src/azure-cli/azure/cli/command_modules/rdbms/tests/latest/recordings/test_mysql_flexible_server_vnet_server_create.yaml
+++ b/src/azure-cli/azure/cli/command_modules/rdbms/tests/latest/recordings/test_mysql_flexible_server_vnet_server_create.yaml
@@ -982,10 +982,10 @@ interactions:
       accept-language:
       - en-US
     method: GET
-    uri: https://management.azure.com/subscriptions/00000000-0000-0000-0000-000000000000/resourcegroups/clitest.rg000001/providers/Microsoft.Network/virtualNetworks/Vnetbclitest-0422332-tservermgmtscenar?api-version=2021-02-01
+    uri: https://management.azure.com/subscriptions/00000000-0000-0000-0000-000000000000/resourcegroups/clitest.rg000001/providers/Microsoft.Network/virtualNetworks/Vnetbclitest-000002?api-version=2021-02-01
   response:
     body:
-      string: '{"error":{"code":"ResourceNotFound","message":"The Resource ''Microsoft.Network/virtualNetworks/Vnetbclitest-0422332-tservermgmtscenar''
+      string: '{"error":{"code":"ResourceNotFound","message":"The Resource ''Microsoft.Network/virtualNetworks/Vnetbclitest-000002''
         under resource group ''clitest.rg000001'' was not found. For more details
         please go to https://aka.ms/ARMResourceNotFoundFix"}}'
     headers:
@@ -1032,11 +1032,11 @@ interactions:
       - AZURECLI/2.22.0 (MSI) azsdk-python-azure-mgmt-network/18.0.0 Python/3.7.7
         (Windows-10-10.0.19041-SP0)
     method: PUT
-    uri: https://management.azure.com/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/clitest.rg000001/providers/Microsoft.Network/virtualNetworks/Vnetbclitest-0422332-tservermgmtscenar?api-version=2020-11-01
+    uri: https://management.azure.com/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/clitest.rg000001/providers/Microsoft.Network/virtualNetworks/Vnetbclitest-000002?api-version=2020-11-01
   response:
     body:
-      string: "{\r\n  \"name\": \"Vnetbclitest-0422332-tservermgmtscenar\",\r\n  \"id\":
-        \"/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/clitest.rg000001/providers/Microsoft.Network/virtualNetworks/Vnetbclitest-0422332-tservermgmtscenar\",\r\n
+      string: "{\r\n  \"name\": \"Vnetbclitest-000002\",\r\n  \"id\":
+        \"/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/clitest.rg000001/providers/Microsoft.Network/virtualNetworks/Vnetbclitest-000002\",\r\n
         \ \"etag\": \"W/\\\"fe4ab77a-a7d5-4185-a04f-0cd1b4511dcc\\\"\",\r\n  \"type\":
         \"Microsoft.Network/virtualNetworks\",\r\n  \"location\": \"eastus2euap\",\r\n
         \ \"properties\": {\r\n    \"provisioningState\": \"Updating\",\r\n    \"resourceGuid\":
@@ -1142,11 +1142,11 @@ interactions:
       - AZURECLI/2.22.0 (MSI) azsdk-python-azure-mgmt-network/18.0.0 Python/3.7.7
         (Windows-10-10.0.19041-SP0)
     method: GET
-    uri: https://management.azure.com/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/clitest.rg000001/providers/Microsoft.Network/virtualNetworks/Vnetbclitest-0422332-tservermgmtscenar?api-version=2020-11-01
+    uri: https://management.azure.com/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/clitest.rg000001/providers/Microsoft.Network/virtualNetworks/Vnetbclitest-000002?api-version=2020-11-01
   response:
     body:
-      string: "{\r\n  \"name\": \"Vnetbclitest-0422332-tservermgmtscenar\",\r\n  \"id\":
-        \"/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/clitest.rg000001/providers/Microsoft.Network/virtualNetworks/Vnetbclitest-0422332-tservermgmtscenar\",\r\n
+      string: "{\r\n  \"name\": \"Vnetbclitest-000002\",\r\n  \"id\":
+        \"/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/clitest.rg000001/providers/Microsoft.Network/virtualNetworks/Vnetbclitest-000002\",\r\n
         \ \"etag\": \"W/\\\"11b8d49f-8243-43f4-a563-0920b32022d5\\\"\",\r\n  \"type\":
         \"Microsoft.Network/virtualNetworks\",\r\n  \"location\": \"eastus2euap\",\r\n
         \ \"properties\": {\r\n    \"provisioningState\": \"Succeeded\",\r\n    \"resourceGuid\":
@@ -1976,11 +1976,11 @@ interactions:
       accept-language:
       - en-US
     method: GET
-    uri: https://management.azure.com/subscriptions/00000000-0000-0000-0000-000000000000/resourcegroups/clitest.rg000001/providers/Microsoft.Network/virtualNetworks/Vnetbclitest-0422332-tservermgmtscenar/subnets/Subnetbclitest-0422332-tservermgmtscenar?api-version=2021-02-01
+    uri: https://management.azure.com/subscriptions/00000000-0000-0000-0000-000000000000/resourcegroups/clitest.rg000001/providers/Microsoft.Network/virtualNetworks/Vnetbclitest-000002/subnets/Subnetbclitest-000002?api-version=2021-02-01
   response:
     body:
       string: "{\r\n  \"error\": {\r\n    \"code\": \"NotFound\",\r\n    \"message\":
-        \"Resource /subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/clitest.rg000001/providers/Microsoft.Network/virtualNetworks/Vnetbclitest-0422332-tservermgmtscenar/subnets/Subnetbclitest-0422332-tservermgmtscenar
+        \"Resource /subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/clitest.rg000001/providers/Microsoft.Network/virtualNetworks/Vnetbclitest-000002/subnets/Subnetbclitest-000002
         not found.\",\r\n    \"details\": []\r\n  }\r\n}"
     headers:
       cache-control:
@@ -2024,11 +2024,11 @@ interactions:
       - AZURECLI/2.22.0 (MSI) azsdk-python-azure-mgmt-network/18.0.0 Python/3.7.7
         (Windows-10-10.0.19041-SP0)
     method: GET
-    uri: https://management.azure.com/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/clitest.rg000001/providers/Microsoft.Network/virtualNetworks/Vnetbclitest-0422332-tservermgmtscenar?api-version=2020-11-01
+    uri: https://management.azure.com/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/clitest.rg000001/providers/Microsoft.Network/virtualNetworks/Vnetbclitest-000002?api-version=2020-11-01
   response:
     body:
-      string: "{\r\n  \"name\": \"Vnetbclitest-0422332-tservermgmtscenar\",\r\n  \"id\":
-        \"/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/clitest.rg000001/providers/Microsoft.Network/virtualNetworks/Vnetbclitest-0422332-tservermgmtscenar\",\r\n
+      string: "{\r\n  \"name\": \"Vnetbclitest-000002\",\r\n  \"id\":
+        \"/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/clitest.rg000001/providers/Microsoft.Network/virtualNetworks/Vnetbclitest-000002\",\r\n
         \ \"etag\": \"W/\\\"11b8d49f-8243-43f4-a563-0920b32022d5\\\"\",\r\n  \"type\":
         \"Microsoft.Network/virtualNetworks\",\r\n  \"location\": \"eastus2euap\",\r\n
         \ \"properties\": {\r\n    \"provisioningState\": \"Succeeded\",\r\n    \"resourceGuid\":
@@ -2068,7 +2068,7 @@ interactions:
       code: 200
       message: OK
 - request:
-    body: '{"name": "Subnetbclitest-0422332-tservermgmtscenar", "properties": {"addressPrefix":
+    body: '{"name": "Subnetbclitest-000002", "properties": {"addressPrefix":
       "10.0.0.0/24", "serviceEndpoints": [{"service": "Microsoft.Storage"}], "delegations":
       [{"name": "Microsoft.DBforMySQL/flexibleServers", "properties": {"serviceName":
       "Microsoft.DBforMySQL/flexibleServers"}}]}}'
@@ -2091,18 +2091,18 @@ interactions:
       - AZURECLI/2.22.0 (MSI) azsdk-python-azure-mgmt-network/18.0.0 Python/3.7.7
         (Windows-10-10.0.19041-SP0)
     method: PUT
-    uri: https://management.azure.com/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/clitest.rg000001/providers/Microsoft.Network/virtualNetworks/Vnetbclitest-0422332-tservermgmtscenar/subnets/Subnetbclitest-0422332-tservermgmtscenar?api-version=2020-11-01
+    uri: https://management.azure.com/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/clitest.rg000001/providers/Microsoft.Network/virtualNetworks/Vnetbclitest-000002/subnets/Subnetbclitest-000002?api-version=2020-11-01
   response:
     body:
-      string: "{\r\n  \"name\": \"Subnetbclitest-0422332-tservermgmtscenar\",\r\n
-        \ \"id\": \"/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/clitest.rg000001/providers/Microsoft.Network/virtualNetworks/Vnetbclitest-0422332-tservermgmtscenar/subnets/Subnetbclitest-0422332-tservermgmtscenar\",\r\n
+      string: "{\r\n  \"name\": \"Subnetbclitest-000002\",\r\n
+        \ \"id\": \"/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/clitest.rg000001/providers/Microsoft.Network/virtualNetworks/Vnetbclitest-000002/subnets/Subnetbclitest-000002\",\r\n
         \ \"etag\": \"W/\\\"13ef3741-a01d-47f7-a464-f6a406c1c85e\\\"\",\r\n  \"properties\":
         {\r\n    \"provisioningState\": \"Updating\",\r\n    \"addressPrefix\": \"10.0.0.0/24\",\r\n
         \   \"serviceEndpoints\": [\r\n      {\r\n        \"provisioningState\": \"Updating\",\r\n
         \       \"service\": \"Microsoft.Storage\",\r\n        \"locations\": [\r\n
         \         \"eastus2euap\",\r\n          \"centraluseuap\"\r\n        ]\r\n
         \     }\r\n    ],\r\n    \"delegations\": [\r\n      {\r\n        \"name\":
-        \"Microsoft.DBforMySQL/flexibleServers\",\r\n        \"id\": \"/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/clitest.rg000001/providers/Microsoft.Network/virtualNetworks/Vnetbclitest-0422332-tservermgmtscenar/subnets/Subnetbclitest-0422332-tservermgmtscenar/delegations/Microsoft.DBforMySQL/flexibleServers\",\r\n
+        \"Microsoft.DBforMySQL/flexibleServers\",\r\n        \"id\": \"/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/clitest.rg000001/providers/Microsoft.Network/virtualNetworks/Vnetbclitest-000002/subnets/Subnetbclitest-000002/delegations/Microsoft.DBforMySQL/flexibleServers\",\r\n
         \       \"etag\": \"W/\\\"13ef3741-a01d-47f7-a464-f6a406c1c85e\\\"\",\r\n
         \       \"properties\": {\r\n          \"provisioningState\": \"Succeeded\",\r\n
         \         \"serviceName\": \"Microsoft.DBforMySQL/flexibleServers\",\r\n          \"actions\":
@@ -2257,18 +2257,18 @@ interactions:
       - AZURECLI/2.22.0 (MSI) azsdk-python-azure-mgmt-network/18.0.0 Python/3.7.7
         (Windows-10-10.0.19041-SP0)
     method: GET
-    uri: https://management.azure.com/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/clitest.rg000001/providers/Microsoft.Network/virtualNetworks/Vnetbclitest-0422332-tservermgmtscenar/subnets/Subnetbclitest-0422332-tservermgmtscenar?api-version=2020-11-01
+    uri: https://management.azure.com/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/clitest.rg000001/providers/Microsoft.Network/virtualNetworks/Vnetbclitest-000002/subnets/Subnetbclitest-000002?api-version=2020-11-01
   response:
     body:
-      string: "{\r\n  \"name\": \"Subnetbclitest-0422332-tservermgmtscenar\",\r\n
-        \ \"id\": \"/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/clitest.rg000001/providers/Microsoft.Network/virtualNetworks/Vnetbclitest-0422332-tservermgmtscenar/subnets/Subnetbclitest-0422332-tservermgmtscenar\",\r\n
+      string: "{\r\n  \"name\": \"Subnetbclitest-000002\",\r\n
+        \ \"id\": \"/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/clitest.rg000001/providers/Microsoft.Network/virtualNetworks/Vnetbclitest-000002/subnets/Subnetbclitest-000002\",\r\n
         \ \"etag\": \"W/\\\"61051dac-f46b-4c57-b7e4-ecb19ad55ee0\\\"\",\r\n  \"properties\":
         {\r\n    \"provisioningState\": \"Succeeded\",\r\n    \"addressPrefix\": \"10.0.0.0/24\",\r\n
         \   \"serviceEndpoints\": [\r\n      {\r\n        \"provisioningState\": \"Succeeded\",\r\n
         \       \"service\": \"Microsoft.Storage\",\r\n        \"locations\": [\r\n
         \         \"eastus2euap\",\r\n          \"centraluseuap\"\r\n        ]\r\n
         \     }\r\n    ],\r\n    \"delegations\": [\r\n      {\r\n        \"name\":
-        \"Microsoft.DBforMySQL/flexibleServers\",\r\n        \"id\": \"/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/clitest.rg000001/providers/Microsoft.Network/virtualNetworks/Vnetbclitest-0422332-tservermgmtscenar/subnets/Subnetbclitest-0422332-tservermgmtscenar/delegations/Microsoft.DBforMySQL/flexibleServers\",\r\n
+        \"Microsoft.DBforMySQL/flexibleServers\",\r\n        \"id\": \"/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/clitest.rg000001/providers/Microsoft.Network/virtualNetworks/Vnetbclitest-000002/subnets/Subnetbclitest-000002/delegations/Microsoft.DBforMySQL/flexibleServers\",\r\n
         \       \"etag\": \"W/\\\"61051dac-f46b-4c57-b7e4-ecb19ad55ee0\\\"\",\r\n
         \       \"properties\": {\r\n          \"provisioningState\": \"Succeeded\",\r\n
         \         \"serviceName\": \"Microsoft.DBforMySQL/flexibleServers\",\r\n          \"actions\":
@@ -2313,7 +2313,7 @@ interactions:
       "properties": {"administratorLogin": "fluidcordial6", "administratorLoginPassword":
       "43nU0sN8mjOzxTaDFlLpTw", "version": "5.7", "haEnabled": "Disabled", "storageProfile":
       {"backupRetentionDays": 7, "storageMB": 10240, "storageIops": 100}, "delegatedSubnetArguments":
-      {"subnetArmResourceId": "/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/clitest.rg000001/providers/Microsoft.Network/virtualNetworks/Vnetbclitest-0422332-tservermgmtscenar/subnets/Subnetbclitest-0422332-tservermgmtscenar"},
+      {"subnetArmResourceId": "/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/clitest.rg000001/providers/Microsoft.Network/virtualNetworks/Vnetbclitest-000002/subnets/Subnetbclitest-000002"},
       "createMode": "Default"}}'
     headers:
       Accept:
@@ -2798,7 +2798,7 @@ interactions:
     uri: https://management.azure.com/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/clitest.rg000001/providers/Microsoft.DBForMySql/flexibleServers/azuredbclitest-000002?api-version=2020-07-01-preview
   response:
     body:
-      string: '{"sku":{"name":"Standard_B1ms","tier":"Burstable"},"properties":{"administratorLogin":"fluidcordial6","storageProfile":{"storageMB":10240,"storageIops":100,"backupRetentionDays":7,"storageAutogrow":"Disabled","fileStorageSkuName":"Premium_LRS"},"version":"5.7","state":"Ready","haState":"NotEnabled","fullyQualifiedDomainName":"azuredbclitest-000002.mysql.database.azure.com","sourceServerId":"","publicNetworkAccess":"Disabled","sslEnforcement":"Disabled","haEnabled":"Disabled","earliestRestoreDate":"2021-04-23T04:16:31.2318613+00:00","maintenanceWindow":{"customWindow":"Disabled","dayOfWeek":0,"startHour":0,"startMinute":0},"replicationRole":"None","replicaCapacity":10,"delegatedSubnetArguments":{"subnetArmResourceId":"/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/clitest.rg000001/providers/Microsoft.Network/virtualNetworks/Vnetbclitest-0422332-tservermgmtscenar/subnets/Subnetbclitest-0422332-tservermgmtscenar"},"byokEnforcement":"Disabled"},"location":"East
+      string: '{"sku":{"name":"Standard_B1ms","tier":"Burstable"},"properties":{"administratorLogin":"fluidcordial6","storageProfile":{"storageMB":10240,"storageIops":100,"backupRetentionDays":7,"storageAutogrow":"Disabled","fileStorageSkuName":"Premium_LRS"},"version":"5.7","state":"Ready","haState":"NotEnabled","fullyQualifiedDomainName":"azuredbclitest-000002.mysql.database.azure.com","sourceServerId":"","publicNetworkAccess":"Disabled","sslEnforcement":"Disabled","haEnabled":"Disabled","earliestRestoreDate":"2021-04-23T04:16:31.2318613+00:00","maintenanceWindow":{"customWindow":"Disabled","dayOfWeek":0,"startHour":0,"startMinute":0},"replicationRole":"None","replicaCapacity":10,"delegatedSubnetArguments":{"subnetArmResourceId":"/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/clitest.rg000001/providers/Microsoft.Network/virtualNetworks/Vnetbclitest-000002/subnets/Subnetbclitest-000002"},"byokEnforcement":"Disabled"},"location":"East
         US 2 EUAP","id":"/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/clitest.rg000001/providers/Microsoft.DBforMySQL/flexibleServers/azuredbclitest-000002","name":"azuredbclitest-000002","type":"Microsoft.DBforMySQL/flexibleServers"}'
     headers:
       cache-control:
@@ -3033,7 +3033,7 @@ interactions:
     uri: https://management.azure.com/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/clitest.rg000001/providers/Microsoft.DBForMySql/flexibleServers/azuredbclitest-000002?api-version=2020-07-01-preview
   response:
     body:
-      string: '{"sku":{"name":"Standard_B1ms","tier":"Burstable"},"properties":{"administratorLogin":"fluidcordial6","storageProfile":{"storageMB":10240,"storageIops":100,"backupRetentionDays":7,"storageAutogrow":"Disabled","fileStorageSkuName":"Premium_LRS"},"version":"5.7","state":"Ready","haState":"NotEnabled","fullyQualifiedDomainName":"azuredbclitest-000002.mysql.database.azure.com","sourceServerId":"","publicNetworkAccess":"Disabled","sslEnforcement":"Disabled","haEnabled":"Disabled","earliestRestoreDate":"2021-04-23T04:16:31.2318613+00:00","maintenanceWindow":{"customWindow":"Disabled","dayOfWeek":0,"startHour":0,"startMinute":0},"replicationRole":"None","replicaCapacity":10,"delegatedSubnetArguments":{"subnetArmResourceId":"/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/clitest.rg000001/providers/Microsoft.Network/virtualNetworks/Vnetbclitest-0422332-tservermgmtscenar/subnets/Subnetbclitest-0422332-tservermgmtscenar"},"byokEnforcement":"Disabled"},"location":"East
+      string: '{"sku":{"name":"Standard_B1ms","tier":"Burstable"},"properties":{"administratorLogin":"fluidcordial6","storageProfile":{"storageMB":10240,"storageIops":100,"backupRetentionDays":7,"storageAutogrow":"Disabled","fileStorageSkuName":"Premium_LRS"},"version":"5.7","state":"Ready","haState":"NotEnabled","fullyQualifiedDomainName":"azuredbclitest-000002.mysql.database.azure.com","sourceServerId":"","publicNetworkAccess":"Disabled","sslEnforcement":"Disabled","haEnabled":"Disabled","earliestRestoreDate":"2021-04-23T04:16:31.2318613+00:00","maintenanceWindow":{"customWindow":"Disabled","dayOfWeek":0,"startHour":0,"startMinute":0},"replicationRole":"None","replicaCapacity":10,"delegatedSubnetArguments":{"subnetArmResourceId":"/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/clitest.rg000001/providers/Microsoft.Network/virtualNetworks/Vnetbclitest-000002/subnets/Subnetbclitest-000002"},"byokEnforcement":"Disabled"},"location":"East
         US 2 EUAP","id":"/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/clitest.rg000001/providers/Microsoft.DBforMySQL/flexibleServers/azuredbclitest-000002","name":"azuredbclitest-000002","type":"Microsoft.DBforMySQL/flexibleServers"}'
     headers:
       cache-control:
