--- a/linter_exclusions.yml
+++ b/linter_exclusions.yml
@@ -300,6 +300,9 @@ aks update:
     load_balancer_outbound_ports:
       rule_exclusions:
       - option_length_too_long
+    enable_managed_identity:
+      rule_exclusions:
+      - option_length_too_long
 aks update-credentials:
   parameters:
     aad_server_app_secret:
