Add dotnet 6 support

--- a/src/azure-cli/azure/cli/command_modules/appservice/resources/WebappRuntimeStacks.json
+++ b/src/azure-cli/azure/cli/command_modules/appservice/resources/WebappRuntimeStacks.json
@@ -27,6 +27,12 @@
             }
         },
         {
+            "displayName": "DOTNET|6.0",
+            "configs": {
+                "net_framework_version": "v6.0"
+            }
+        },
+        {
             "displayName": "node|10.6",
             "configs": {
                 "WEBSITE_NODE_DEFAULT_VERSION": "10.6.0"
@@ -172,6 +178,12 @@
             "displayName": "DOTNET|5.0",
             "configs": {
                 "linux_fx_version": "DOTNETCORE|5.0"
+            }
+        },
+        {
+            "displayName": "DOTNET|6.0",
+            "configs": {
+                "linux_fx_version": "DOTNETCORE|6.0"
             }
         },
         {
