--- a/src/azure-cli/azure/cli/command_modules/rdbms/tests/latest/recordings/test_mysql_flexible_server_high_availability_prepare.yaml
+++ b/src/azure-cli/azure/cli/command_modules/rdbms/tests/latest/recordings/test_mysql_flexible_server_high_availability_prepare.yaml
@@ -17,8 +17,8 @@ interactions:
       ParameterSetName:
       - --location --name
       User-Agent:
-      - python/3.7.7 (Windows-10-10.0.19041-SP0) msrest/0.6.18 msrest_azure/0.6.3
-        azure-mgmt-resource/12.0.0 Azure-SDK-For-Python AZURECLI/2.19.1
+      - python/3.8.5 (Linux-4.4.0-19041-Microsoft-x86_64-with-glibc2.29) msrest/0.6.21
+        msrest_azure/0.6.3 azure-mgmt-resource/12.1.0 Azure-SDK-For-Python AZURECLI/2.23.0
       accept-language:
       - en-US
     method: PUT
@@ -30,11 +30,11 @@ interactions:
       cache-control:
       - no-cache
       content-length:
-      - '326'
+      - '270'
       content-type:
       - application/json; charset=utf-8
       date:
-      - Wed, 24 Feb 2021 06:27:32 GMT
+      - Wed, 05 May 2021 06:05:58 GMT
       expires:
       - '-1'
       pragma:
