redo the changes to exclude un-intended changes

--- a/src/azure-cli/requirements.py3.windows.txt
+++ b/src/azure-cli/requirements.py3.windows.txt
@@ -33,7 +33,7 @@ azure-mgmt-compute==20.0.0
 azure-mgmt-consumption==2.0.0
 azure-mgmt-containerinstance==1.5.0
 azure-mgmt-containerregistry==3.0.0rc17
-azure-mgmt-containerservice==11.1.0
+azure-mgmt-containerservice==11.2.0
 azure-mgmt-core==1.2.1
 azure-mgmt-cosmosdb==6.2.0
 azure-mgmt-databoxedge==0.2.0
@@ -104,7 +104,7 @@ isodate==0.6.0
 Jinja2==2.11.3
 jmespath==0.9.5
 jsmin==2.2.2
-knack==0.8.1
+knack==0.8.2
 MarkupSafe==1.1.1
 mock==4.0.2
 msal==1.10.0
@@ -117,6 +117,7 @@ pbr==5.3.1
 portalocker==1.7.1
 psutil==5.8.0
 pycparser==2.19
+PyGithub==1.38
 PyJWT==1.7.1
 PyNaCl==1.4.0
 pyOpenSSL==19.0.0
